# warden

./: .configWarden.ini  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  install.sh  warden
env/: pyvenv.cfg
make/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
test/: requirements.txt  test.py
wardenEnv/: pyvenv.cfg
